vlib/v/parser/tests/sql_no_db_expr_a.vv
fn x() {
	// SqlStmt
	sql_ :=
}
